# lisphaskell

./: CHANGELOG.md  LICENSE  README.md  lisphs.cabal
app/: Main.hs
