cabal-version:   3.0
name:            lisphs
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Johan Astborg
maintainer:      gautrsystems@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable lisphs
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                      parsec ^>=3.1.16.1,
                      mtl ^>=2.3.1,
                      containers ^>=0.6.7
    hs-source-dirs:   app
    default-language: Haskell2010
